Fix dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -53,13 +53,3 @@ a {
 .foodblock-shadow {
   box-shadow: 0px 14px 37px 19px rgba(126, 126, 126, 0.08);
 }
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
-}
